--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "antd": "^4.16.13",
     "cloudinary": "^1.26.3",
     "firebase": "^9.0.0",
     "next": "11.1.0",
